Add text content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link href="./resources/css/styles.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-
+    <div class="logoBanner">
+      <img src="./resources/css/images/logo.png"/>
+      <p>SECERET AGENT SUPPLY INC.</p>
+    </div>
+    <div class="mainBanner">
+      <div class="header">
+        <p>NEW ARRIVALS</p>
+        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      </div>
+    </div>
+    <nav class="navbar">
+      <p>Eyewear</p>
+      <p>Apparel</p>
+      <p>Gadgets</p>
+      <p>Vehicles</p>
+      <p>Classes</p>
+      <p>Contact</p>
+    </nav>
+    <div class="productGrid">
+      <p>Exploding Pen</p>
+      <p>Cellular Watch</p>
+      <p>Thermal Glasses</p>
+    </div>
+    <div class="companyInfo">
+      <div class="location">
+        <p>Location</p>
+        <p>47.346436 84.32354</p>
+      </div>
+      <div class="hours">
+        <p>Hours</p>
+        <p>0800 - 1800</p>
+      </div>
+    </div>
+    <footer class="footer">
+      <p>Copyright Secret Agent Supply Inc.</p>
+    </footer>
   </body>
 </html>
