Add logo banner

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc.</title>
-    <link href="./resoruces/css/reset.css" type="text/css" rel="stylesheet”/>
-    <link href="./resources/css/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="logoBanner">
-      <img src="./resources/css/images/logo.png"/>
-      <p>SECERET AGENT SUPPLY INC.</p>
+    <div class="logoBackground">
+      <div class="logoBanner">
+        <img src="./resources/css/images/logo.png"/>
+        <p>SECRET AGENT SUPPLY INC.</p>
+      </div>
     </div>
     <div class="mainBanner">
       <div class="header">
