Add header banner

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       </div>
     </div>
     <div class="mainBanner">
-      <div class="header">
-        <p>NEW ARRIVALS</p>
-        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      <div class="container">
+        <div class="header">
+          <p>NEW ARRIVALS</p>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
       </div>
     </div>
     <nav class="navbar">
