--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+    <!--Logo and company name at top of page. Background not container to see
+    if it behaves different-->
     <div class="logoBackground">
       <div class="logoBanner">
         <img src="./resources/css/images/logo.png"/>
         <p>SECRET AGENT SUPPLY INC.</p>
       </div>
     </div>
+    <!--Main banner and header. Adjusted title width to 25rem as I think wrong
+    on spec-->
     <div class="mainBanner">
       <div class="container">
         <div class="header">
@@ -21,13 +25,17 @@
         </div>
       </div>
     </div>
+    <!--Nav beneath banner. No links as not requested and don't make sense internal
+    to page-->
     <nav class="navbar">
-      <p>Eyewear</p>
-      <p>Apparel</p>
-      <p>Gadgets</p>
-      <p>Vehicles</p>
-      <p>Classes</p>
-      <p>Contact</p>
+      <div class="container">
+        <p>Eyewear</p>
+        <p>Apparel</p>
+        <p>Gadgets</p>
+        <p>Vehicles</p>
+        <p>Classes</p>
+        <p>Contact</p>
+      </div>
     </nav>
     <div class="productGrid">
       <p>Exploding Pen</p>
