Add product grid

--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
         <p>Contact</p>
       </div>
     </nav>
+    <!--Images of 3 products plus names-->
     <div class="productGrid">
-      <p>Exploding Pen</p>
-      <p>Cellular Watch</p>
-      <p>Thermal Glasses</p>
+        <div class="product">
+          <div class="box">
+           <img src="./resources/css/images/pen.png"/>
+         </div>
+          <p>Exploding Pen</p>
+        </div>
+        <div class="product">
+          <div class="box">
+            <img src="./resources/css/images/watch.png"/>
+          </div>
+          <p>Cellular Watch</p>
+        </div>
+        <div class="product">
+          <div class="box">
+            <img src="./resources/css/images/glasses.png"/>
+          </div>
+          <p>Thermal Glasses</p>
+        </div>
     </div>
     <div class="companyInfo">
       <div class="location">
