Add location and hours

--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
         </div>
     </div>
     <div class="companyInfo">
-      <div class="location">
-        <p>Location</p>
+      <div class="info">
+        <div class="title">
+          <p>Location</p>
+        </div>
         <p>47.346436 84.32354</p>
       </div>
-      <div class="hours">
-        <p>Hours</p>
+      <div class="info">
+        <div class="title">
+          <p>Hours</p>
+        </div>
         <p>0800 - 1800</p>
       </div>
     </div>
