--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </nav>
     <!--Images of 3 products plus names-->
     <div class="productGrid">
+      <div class="container">
         <div class="product">
           <div class="box">
            <img src="./resources/css/images/pen.png"/>
@@ -53,27 +54,32 @@
         </div>
         <div class="product">
           <div class="box">
-            <img src="./resources/css/images/glasses.png"/>
+            <img id="glasses" src="./resources/css/images/glasses.png"/>
           </div>
           <p>Thermal Glasses</p>
         </div>
+      </div>
     </div>
     <div class="companyInfo">
-      <div class="info">
-        <div class="title">
-          <p>Location</p>
+      <div class="container">
+        <div class="info">
+          <div class="title">
+            <p>Location</p>
+          </div>
+          <p>47.346436 84.32354</p>
         </div>
-        <p>47.346436 84.32354</p>
-      </div>
-      <div class="info">
-        <div class="title">
-          <p>Hours</p>
+        <div class="info">
+          <div class="title">
+            <p>Hours</p>
+          </div>
+          <p>0800 - 1800</p>
         </div>
-        <p>0800 - 1800</p>
       </div>
     </div>
     <footer class="footer">
-      <p>Copyright Secret Agent Supply Inc.</p>
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
     </footer>
   </body>
 </html>
