Final draft commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="mainBanner">
       <div class="container">
         <div class="header">
-          <p>NEW ARRIVALS</p>
+          <p>NEW ARRIVAL</p>
           <h1>SPORT BIKES AND MOTORCYCLES</h1>
         </div>
       </div>
@@ -36,6 +36,8 @@
         <p>Classes</p>
         <p>Contact</p>
       </div>
+      <div class="container1024">
+        <p>Menu</p>
     </nav>
     <!--Images of 3 products plus names-->
     <div class="productGrid">
